Fix user review slider alignment on small mobile devices

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -752,7 +752,7 @@
 
 		.user-review {
 			flex-shrink: 0;
-			width: unquote("min(calc(100% - 6rem), 28rem)");
+			width: unquote("min(calc(100vw - 6rem), 28rem)");
 		}
 	}
 
